--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
             android:name=".MainMenu"
             android:label="@string/title_activity_main_menu"
             android:theme="@style/AppTheme" />
-        <activity android:name=".Utils.BarcodeCapture"></activity>
+        <activity android:name=".Utils.BarcodeCapture" />
+        <activity android:name=".AddLocation"></activity>
     </application>
 
 </manifest>
